--- a/index.css
+++ b/index.css
@@ -1,84 +1,38 @@
-* {
+body{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+*{
     margin: 0;
     padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
-body {
-    background-color: rgb(118, 121, 124);
+.container{
+    text-align: center;
 }
-nav {
-    width: 100%;
-    height: 5rem;
-    background-color: rgba(51, 52, 53, 0.853);
-    color: rgb(240, 248, 255);
+.bio{
+    text-align: center;
+    padding: 20px;
 }
-.nav-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: inherit;
-    padding: 0 2rem;
-    list-style: none;
-    border-radius: 0.5em;
-}
-
- a {
-    text-decoration: none;
-    color: rgb(106, 109, 112);
-    font-size: 1.5rem;
-    font-family: sans-serif;
-
-}
-
-.logo {
-    border-radius: 0.5rem;
-    width: 5rem;
-
-}
-
-.container {
-    width: 80%;
-    height: 22rem;
-    font-family: sans-serif;
-    background-color: rgb(106, 109, 112);
-    border: 0 solid rgba(54, 54, 56, 0.872);
-    border-radius: 2em;
-    margin: 2rem auto;
-    box-shadow: 0.5rem 0.5rem 0.5rem 0.2rem rgba(81, 83, 83, 0.329);
-    text-align: start;
-}
-.profile {
-    display: flex;
-    padding: 0.5rem 2rem;
-
-}
-.profile img {
-    width: 20rem;
+.bio img{
+    width: 20%;
+    border: 8px solid rgb(157, 146, 146);
     border-radius: 50%;
-}
-.profile ul {
-    margin-left: 5rem;
-    margin-top: rem;
-    padding: 0.5rem;
-    list-style: none;
-}
-.profile li {
-    margin: 2rem 0;
-    font-size: 2em;
-    font-weight: 600;
-    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 20px;
 }
 
-p {
-    padding-top: 4rem;
-    font-size: 2rem;
-    margin-left: 1rem;
-    padding-left: 1rem;
-    font-family: Arial, Helvetica, sans-serif;
+.track{
+    margin: 20px 0 30px 0;
 }
 
-span {
-    font-weight: 900;
+a{
+    background-color: rgb(116, 108, 108);
+    padding: 10px 16px;
+    text-decoration: none;
+    color: white;
+    border-radius: 8px;
 }
 
 
